DocumentLeafReader to top; execute functions to DocumentParser; rename to IndexTimeScript